crates/aether-actor-derive/tests/ui/rejects_stream_reserved_ffi.stderr
error: #[handler::stream] is reserved and not yet implemented (ADR-0112)
  --> tests/ui/rejects_stream_reserved_ffi.rs:32:5
   |
32 |     #[handler::stream]
   |     ^^^^^^^^^^^^^^^^^^

warning: unused imports: `FfiCtx` and `Stream`
 --> tests/ui/rejects_stream_reserved_ffi.rs:5:20
  |
5 | use aether_actor::{FfiCtx, Stream, actor};
  |                    ^^^^^^  ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
